toasts have been moved to the bottom-right corner to avoid overlapping with more important content

--- a/website/css/materialize-modifications.scss
+++ b/website/css/materialize-modifications.scss
@@ -543,3 +543,11 @@ span.badge{
 input[type=range]::-webkit-slider-thumb {
    background: #000;
 }
+
+#toast-container{
+   @media only screen and (min-width: 993px){
+      top: unset;
+      right: min(5%, 100px);
+      bottom: 5%;
+   }
+}
